# apphub

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cspell.config.yaml  cspell.yaml  dev.bedsteler20.Apphub.yaml  melos.yaml  meson.build  messages.po  pubspec.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  slang.yaml
.github/: dependabot.yml
.github/workflows/: flatpak.yml  lint.yml  sync-flatpak-dependencys.yml
apphub/: Cargo.toml  analysis_options.yaml  build.rs  globals.py  main.py  meson.build  pubspec.yaml  window.py
apphub/api/: app_hit.py  client.py  types.py
apphub/assets/i18n/: en.i18n.json
apphub/components/: app_card.py  app_grid.py  app_links.py  install_button.py  loading.py  pager_buttons.py  screenshots_caracal.py  settings_window.py
apphub/lib/: main.dart  router.dart
apphub/lib/api/: pagination.freezed.dart  search.freezed.dart  search.g.dart  summary.dart  summary.g.dart  utils.dart
apphub/lib/flatpak/: installed_app.g.dart  messaging.dart
apphub/lib/pages/: app_page.dart  home_page.dart  scaffold.dart
apphub/lib/providers/: flatpak.g.dart  settings.dart
apphub/lib/widgets/: menu.dart  pagination_layout.dart  search_pallet.dart
apphub/linux/flutter/: generated_plugin_registrant.cc
apphub/pages/: app_page.py  collection_page.py  error_page.py  home_page.py  nav_page.py
apphub/src/: install.rs  main.rs  utils.rs
apphub/src/backend/: apps.rs  helpers.rs  mod.rs  transaction.rs  update.rs
apphub/src/flathub/: client.rs  json_helpers.rs  mod.rs  query.rs
apphub/src/widgets/: app_card.blp  app_grid.rs  app_page.blp  app_page.rs  home_page.blp  home_page.rs  install_button.rs  mod.rs  screenshots_caracal.blp  window.blp
apphub/src/widgets/updates_page/: mod.rs
apphub/ui/: app_card.blp  app_grid.blp  app_links.blp  app_page.blp  collection_page.blp  gresource.xml  home_page.blp  install_button.blp  loading.blp  meson.build  nav_page.blp  pager_buttons.blp  screenshots_caracal.blp  settings_window.blp  styles.css  window.blp
apphub/utils/: flatpak.py  gio_async.py  image.py  locate.py  misc.py  navigator.py  patterns.py  router.py  transaction.py
assets/: default_settings.yaml
assets/i18n/: en.i18n.json
build-aux/: com.bedsteler20.AppHub.json  python3-requirements.json  requirements.txt
build-aux/flatpak/: com.bedsteler20.AppHub.json  flatpak.json  libadw.json  python3-debugpy.json  python3-requirements-devel.json  python3-requirements.json
build-aux/flatpak/patches/: flatpak_user_dir.patch
data/: apphub.gresource.xml  com.bedsteler20.AppHub.appdata.xml  com.bedsteler20.AppHub.desktop  com.bedsteler20.AppHub.gschema.xml  meson.build
data/icons/: meson.build
dbus_types/: Cargo.toml
dbus_types/src/: flatpak.rs  lib.rs
lib/: main.dart  router.dart
lib/api/: app_of_the_day.g.dart  appstream.g.dart  client.dart  client.g.dart  extensions.dart  pagination.g.dart  worker.dart  worker.freezed.dart  worker.g.dart
lib/flatpak/: base.dart  installed_app.dart  native.dart
lib/hooks/: util_hooks.dart
lib/native/: flatpak.dart  gio.dart  glib.dart  gobject.dart
lib/pages/: app_page.dart  home_page.dart  installed_page.dart  pagination_page.dart  scaffold.dart  search_page.dart
lib/providers/: flathub.dart  flathub.g.dart  flatpak.dart  flatpak.freezed.dart  flatpak.g.dart  pages.dart  pages.g.dart
lib/utils/: env.dart  std.dart
lib/widgets/: app_tile.dart  page_content_layout.dart  search_pallet.dart  terminal.dart  weekly_apps_carousel.dart
linux/: my_application.cc
linux/flutter/: generated_plugins.cmake
macros/: Cargo.toml
macros/src/: lib.rs
po/: POTFILES  meson.build
portal/: Cargo.toml
portal/src/: helpers.rs  main.rs  portal.rs
portal_client/: Cargo.toml
portal_client/src/: app_info.rs  client.rs  install_location.rs  lib.rs  proxy.rs  transaction.rs  transaction_type.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app_card.blp  app_card.rs  app_grid.blp  app_grid.rs  app_links.blp  app_links.rs  app_page.blp  app_page.rs  application.rs  config.rs  context.rs  data_loader.rs  error.rs  flathub.rs  flathub_client.rs  flatpak.rs  home_page.blp  home_page.rs  image.rs  install.rs  install_btn.blp  install_btn.rs  install_location.rs  main.rs  navigator.rs  prelude.rs  proc_macros.rs  router.rs  screenshots_caracal.blp  screenshots_caracal.rs  store.rs  styles.less  transaction.rs  transaction_state.rs  transaction_type.rs  utils.rs  window.blp  window.rs
src/assets/: dev.bedsteler20.Apphub.metainfo.xml  resources.xml
src/backend/: app_info.rs  apps.rs  helpers.rs  installation.rs  mod.rs  run_transaction.rs  source_id_collection.rs  transaction.rs  update.rs
src/event_bus/: mod.rs  transaction_type.rs
src/flatbus/: mod.rs
src/flathub/: app_info.rs  app_summary.rs  client.rs  query.rs
src/flatpak/: flatpak_core.rs  install.rs  mod.rs  transaction_chanel.rs  transaction_state.rs
src/models/: context.rs  install_location.rs  installed_app.rs  installed_app_store.rs  installed_apps_list.rs  mod.rs  transaction.rs  transaction_list.rs
src/state/: context.rs  installed_apps_list.rs  mod.rs  transaction_list.rs  updates_list.rs
src/utils/: call_me_maybe.rs  flatpak_utils.rs  http.rs  load_grid.rs  mod.rs  sendable.rs  transaction_runner.rs  xdg.rs
src/views/: app_page.blp  app_page.rs  error_page.blp  error_page.rs  find_page.blp  home_page.blp  home_page.rs  installed_apps_page.blp  installed_apps_page.rs  mod.rs  pager_page.blp  pager_page.rs  updates_page.blp  updates_page.rs  window.blp  window.rs
src/widgets/: ah_app_card.blp  ah_app_card.rs  app_card.blp  app_card.rs  app_grid.blp  app_grid.rs  app_links.blp  app_links.rs  app_page.blp  app_page.rs  home_page.blp  home_page.rs  image.rs  install_btn.blp  install_btn.rs  install_button.blp  lazy.rs  mod.rs  msg_dialog_builder.rs  screenshots_caracal.rs  window.blp  window.rs
src/widgets/updates_page/: update_page_card.blp
tools/: flatpak-pip-generator.py
