workspace = { members = ["macros"] }
[package]
name = "apphub"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = [
    "gtk_v4_10",
    "v1_4",
] }
ashpd = "0.6.7"
async-channel = "2.1.1"
bytesize = "1.3.0"
gtk = { version = "0.7.3", package = "gtk4", features = [
    "gnome_45",
    "blueprint",
] }
libflatpak = "0.4.0"
macros = { version = "0.1.0", path = "macros" }
once_cell = "1.18.0"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["rt-multi-thread"] }
tr = "0.1.7"
[build-dependencies]
glib-build-tools = "0.18.0"
