[package]
name = "apphub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["gtk_v4_10", "v1_4"] }
async-channel = "2.1.1"
gio = "0.18.4"
glib = "0.18.4"
gtk = { version = "0.7.3", package = "gtk4", features = ["gnome_45", "blueprint", "xml_validation"] }
libflatpak = "0.4.0"
flathub-rs ={ git = "https://github.com/bedsteler20/flathub-rs.git", branch = "main"}
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
once_cell = "1.19.0"
itertools = "0.12.0"
indexmap = "2.1.0"
