[package]
name = "dbus_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflatpak = { version = "0.4.0", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
zvariant = "3.15.0"

[features]
libflatpak = ["dep:libflatpak"]
