[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus_types = { version = "0.1.0", path = "../dbus_types", features = ["libflatpak"] }
glib = "0.18.4"
libflatpak = "0.4.0"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.35.0", features = ["full"] }
zbus = { version = "3.14.1", features = ["tokio"] }
